do partners mobile

--- a/partners.html
+++ b/partners.html
@@ -18,9 +18,11 @@
       <div class="container">
         <div style="font-size:14px;">
           <i class="fas fa-phone" style="margin-right:2px;"></i>
-          <span style="margin-right:30px;">+255 737 235137</span>
-          <i class="fas fa-envelope" style="margin-right:2px;"></i>
-          <a href="mailto:info@ysmf.org">info@ysmf.org</a>
+          <a style="margin-right:30px;" href="tel:+255 737 235137">+255 737 235137</a>
+          <span id="navbar-top-email">
+            <i class="fas fa-envelope" style="margin-right:2px;"></i>
+            <a href="mailto:info@ysmf.org">info@ysmf.org</a>
+          </span>
         </div>
         <div>
           <a href="https://www.facebook.com/www.ysmf.org" target="_blank" style="margin-right:30px;"><i class="fab fa-facebook-f"></i></a>
@@ -78,8 +80,8 @@
     </div>
 
 
-    <div class="container section">
-      <table>
+    <div id="partners-container" class="container section">
+      <table id="desktop-partners-table">
         <tr>
           <th class="bandera">Partner</th>
           <th>Website</th>
@@ -113,48 +115,37 @@
           <td><a href="http://siha.ca" target="_blank">siha.ca</a></td>
         </tr>
       </table>
+
+      <table id="mobile-partners-table">
+        <tr>
+          <th class="bandera">Partner</th>
+        </tr>
+        <tr>
+          <td>Morogoro municipality</td>
+        </tr>
+        <tr>
+          <td><a href="https://msichana.or.tz" target="_blank">Msichana Initiative</a></td>
+        </tr>
+        <tr>
+          <td><a href="http://huheso.or.tz" target="_blank">HUHESO</a></td>
+        </tr>
+        <tr>
+          <td><a href="http://www.childrightsforum.org" target="_blank">Tanzania Child Rights Forum (TCRF)</a></td>
+        </tr>
+        <tr>
+          <td><a href="https://yali.state.gov" target="_blank">Young African Leaders Initiative (YALI)</a></td>
+        </tr>
+        <tr>
+          <td><a href="https://www.equalitynow.org" target="_blank">Equality Now</a></td>
+        </tr>
+        <tr>
+          <td><a href="http://siha.ca" target="_blank">Students Invested in Health Association (SIHA)</a></td>
+        </tr>
+      </table>
     </div>
 
-    <!-- <div style="padding-top:80px;">
-      <div class="container" style="width:800px;">
-        <div class="grid-4">
-          <a href="https://msichana.or.tz/" target="_blank" class="partner">
-            <img src="images/partners/msichana-logo-square.png">
-          </a>
-          <a href="http://huheso.or.tz/" target="_blank" class="partner">
-            <img src="images/partners/huheso-logo-square.png">
-          </a>
-          <a href="http://www.childrightsforum.org/" target="_blank" class="partner">
-            <img src="images/partners/tcrf-logo-square.png">  
-          </a>
-          <a href="https://yali.state.gov/" target="_blank" class="partner">
-            <img src="images/partners/yali-logo-square.png">
-          </a>
-        </div>
-      </div>
-    </div>
-
-    <div style="padding-bottom:80px;">
-      <div class="container" style="width:800px;">
-        <div class="grid-4">
-          <div class="partner">
-            <img src="images/partners/ya-serikali-logo-square.png">
-          </div>
-          <div class="partner">
-            <img src="images/partners/morogoro-municipal-logo-square.png">
-          </div>
-          <a href="https://www.equalitynow.org/" target="_blank" class="partner">
-            <img src="images/partners/equality-now-logo-square.png">
-          </a>
-          <div class="partner">
-            <img src="images/partners/siha-logo-square.png">
-          </div>
-        </div>
-      </div>
-    </div> -->
-
-    <div class="footer" style="background-color:#f4f7f4;">
-      <div class="container footer-container grid-12">
+    <div class="footer" style="background-color:#f5f5f5;">
+      <div class="container footer-container">
         <div>
           <div class="footer-heading">Who we are</div>
           <div><a href="founders-message.html">Founder's message</a></div>
@@ -171,13 +162,13 @@
         <div>
           <div class="footer-heading">Contact</div>
         </div>
-        <div><img src="images/logo-grande-gray.svg" style="width:100%;"></div>
+        <div><img src="images/logo-grande-gray.svg"></div>
       </div>
     </div>
 
     <div class="footer footer-bottom" style="background-color:#eee;">
       <div class="container footer-container">
-        <div style="font-size:14px;">Copyright © 2020. Young Strong Mothers Foundation. All rights reserved.</div>
+        <div id="copyright">Copyright © 2020. Young Strong Mothers Foundation. All rights reserved.</div>
         <div>
           <a href="https://www.facebook.com/www.ysmf.org" target="_blank" style="margin-right:30px;"><i class="fab fa-facebook-f"></i></a>
           <a href="https://twitter.com/info_ysmf" target="_blank"><i class="fab fa-twitter"></i></a>
