--- a/our-history.html
+++ b/our-history.html
@@ -18,9 +18,11 @@
       <div class="container">
         <div style="font-size:14px;">
           <i class="fas fa-phone" style="margin-right:2px;"></i>
-          <span style="margin-right:30px;">+255 737 235137</span>
-          <i class="fas fa-envelope" style="margin-right:2px;"></i>
-          <a href="mailto:info@ysmf.org">info@ysmf.org</a>
+          <a style="margin-right:30px;" href="tel:+255 737 235137">+255 737 235137</a>
+          <span id="navbar-top-email">
+            <i class="fas fa-envelope" style="margin-right:2px;"></i>
+            <a href="mailto:info@ysmf.org">info@ysmf.org</a>
+          </span>
         </div>
         <div>
           <a href="https://www.facebook.com/www.ysmf.org" target="_blank" style="margin-right:30px;"><i class="fab fa-facebook-f"></i></a>
