--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
 
         <div class="navbar-nav-scroll nav-mobile">
           <div class="navbar-nav bd-navbar-nav flex-row">
-            <a class="nav-item nav-link" href="#">Who we are</a>
+            <a class="nav-item nav-link" href="#" data-subnav-id="who-we-are-subnav">
+              <span>Who we are</span>
+              <i class="fas fa-caret-down"></i>
+            </a>
             <a class="nav-item nav-link" href="#">What we do</a>
             <a class="nav-item nav-link" href="#">Programmes</a>
             <a class="nav-item nav-link" href="#">Volunteering</a>
@@ -69,6 +72,13 @@
           </ul>
         </div>
       </div>
+    </div>
+
+    <div class="subnav" id="who-we-are-subnav">
+      <a href="founders-message.html">Founder's message</a>
+      <a href="our-history.html">Our history</a>
+      <a href="problem-statement.html">Problem statement</a>
+      <a href="partners.html">Our partners</a>
     </div>
 
     <div class="hero">
@@ -182,5 +192,6 @@
     <script src="https://kit.fontawesome.com/a93f17701c.js" crossorigin="anonymous"></script>
     <script src="js/acceptTerms.js"></script>
     <script src="js/desktop-navbar.js"></script>
+    <script src="js/mobile-navbar.js"></script>
 
 </body></html>
