--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
 
         <div class="navbar-nav-scroll nav-mobile">
           <div class="navbar-nav bd-navbar-nav flex-row">
-            <a class="nav-item nav-link" href="#" data-subnav-id="who-we-are-subnav">
+            <span class="nav-item nav-link" data-subnav-id="who-we-are-subnav">
               <span>Who we are</span>
               <i class="fas fa-caret-down"></i>
-            </a>
+            </span>
             <a class="nav-item nav-link" href="#">What we do</a>
             <a class="nav-item nav-link" href="#">Programmes</a>
             <a class="nav-item nav-link" href="#">Volunteering</a>
