fix founders message

--- a/founders-message.html
+++ b/founders-message.html
@@ -91,7 +91,7 @@
 
     <div style="padding:50px 0;">
       <div id="message" class="container">
-        <img src="images/jackie-avatar.jpg" style="width:100%;border-radius:99px;">
+        <img src="images/jackie-avatar.jpg">
         <div style="position:relative;">
           <div class="message-arrow"></div>
           <div style="margin-bottom:10px;font-weight:bold;color:#3c1053;">Ms. Jackie Leonard Bomboma</div>
