--- a/partners.html
+++ b/partners.html
@@ -140,16 +140,16 @@
           <td><a href="http://huheso.or.tz" target="_blank">HUHESO</a></td>
         </tr>
         <tr>
-          <td><a href="http://www.childrightsforum.org" target="_blank">Tanzania Child Rights Forum (TCRF)</a></td>
+          <td><a href="http://www.childrightsforum.org" target="_blank">TCRF</a></td>
         </tr>
         <tr>
-          <td><a href="https://yali.state.gov" target="_blank">Young African Leaders Initiative (YALI)</a></td>
+          <td><a href="https://yali.state.gov" target="_blank">YALI</a></td>
         </tr>
         <tr>
           <td><a href="https://www.equalitynow.org" target="_blank">Equality Now</a></td>
         </tr>
         <tr>
-          <td><a href="http://siha.ca" target="_blank">Students Invested in Health Association (SIHA)</a></td>
+          <td><a href="http://siha.ca" target="_blank">SIHA</a></td>
         </tr>
       </table>
     </div>
