--- a/contact.html
+++ b/contact.html
@@ -1,16 +1,17 @@
-<!DOCTYPE html><html lang="es"><head>
-    <title>Young Strong Mothers Foundation (YSMF)</title>
+<!DOCTYPE html>
+<html lang="es">
+  <head>
+    <title>Contact - YSMF</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Nuestra motivación es la promoción del bienestar psicológico y la calidad de vida.">
-    <link rel="icon" href="images/favicon_32.png" sizes="32x32" type="image/png"> 
-    <script defer src="https://use.fontawesome.com/releases/v5.11.2/js/all.js" integrity="sha384-b3ua1l97aVGAPEIe48b4TC60WUQbQaGi2jqAWM90y0OZXZeyaTCWtBTKtjW2GXG1" crossorigin="anonymous"></script>
+    <link rel="icon" href="images/favicon_32.png" sizes="32x32" type="image/png">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700" rel="stylesheet">
     <link href="./css/main.css" rel="stylesheet">
-    <link media="screen and (max-width: 1023px)" href="./css/mobile.css" rel="stylesheet">
-    <link media="screen and (min-width: 1024px)" href="./css/desktop.css" rel="stylesheet">
+    <link media="screen and (max-width: 991px)" href="./css/mobile.css" rel="stylesheet">
+    <link media="screen and (min-width: 992px)" href="./css/desktop.css" rel="stylesheet">
   </head>
-  <body id="home">
+  <body>
 
     <div class="navbar-top">
       <div class="container">
@@ -68,7 +69,7 @@
             <li><a href="#">Programmes</a></li>
             <li><a href="#">Volunteering</a></li>
             <li><a href="#">News</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="#">Contact</a></li>
           </ul>
         </div>
       </div>
@@ -81,42 +82,64 @@
       <a href="partners.html">Our partners</a>
     </div>
 
-    <div class="hero">
-      <div class="container grid-12">
-        <div class="hero-heading">
-          <h2>
-            <div style="margin-left:30px;"><span><span>The home</span></span></div>
-            <div><span><span>of hope and</span></span></div>
-            <div style="margin-left:-30px;"><span><span>inspiration</span></span></div>
-          </h2>
+    <div id="founders-message-title" class="header secondary-bg">
+      <div class="container">
+        <h1>Contact us</h1>
+      </div>
+    </div>
+
+    <div class="container grid-12" style="margin:50px auto;">
+      <div class="contact" style="padding:50px;background-color:#2e3e4a;">
+        <h2 class="contact-title">Morogoro - Office</h2>
+
+        <div class="contact-text-white" style="margin-top:20px;">
+          <div style="margin-bottom:5px;">
+            <i class="fas fa-map-marker-alt" style="margin-right:10px;"></i>
+            <b>Address</b>
+          </div>
+          <div class="contact-text">
+            <div>Po box 2416 Tushikamane Center</div>
+            <div>Morogoro</div>
+            <div>Tanzania</div>
+          </div>
         </div>
+
+        <!-- <div class="contact-text">
+          Young Strong Mothers Foundation (YSMF), PO Box 2416, Kihonda Along Dodoma Road At Pepsi Street Morogoro
+        </div> -->
+
+        <div class="contact-text-white" style="margin-top:20px;">
+          <div style="margin-bottom:5px;">
+            <i class="fas fa-phone" style="margin-right:10px;"></i>
+            <b>Phones</b>
+          </div>
+          <div>
+            <a href="tel:+255 737 235 137" class="contact-text">+255 737 235 137</a>
+          </div>
+          <div class="contact-text">
+            <a href="tel:+255 754 200 102" class="contact-text">+255 754 200 102</a>
+          </div>
+        </div>
+
+        <div style="margin-top:20px;">
+          <div class="contact-text-white" style="margin-bottom:5px;">
+            <i class="fas fa-envelope" style="margin-right:10px;"></i>
+            <b>Email</b>
+          </div>
+          <div class="contact-text">
+            info@ysmf.org
+          </div>
+        </div>
+
       </div>
-    </div>
-
-    <div id="hero-mobile">
-      The home of hope and inspiration
-    </div>
-
-    <div id="about" class="container">
-      <h1 style="text-align:center;margin-bottom:30px;">About us</h1>
-      <p>Young Strong Mothers Foundation (YSMF) was registered as a Non Governmental, non-profit and non partisan organization, which was officially registered on 09th February 2015 under registration certificate number 00NGO/00007768, issued by the Ministry of Community Development, Gender and Children. YSMF operates in Tanzania mainland with the main office located in Morogoro Municipality. So far the organization has registered 576 vulnerable teenage mothers from Morogoro Municipal wards alone where most projects and activities are implemented. It is an organization that comprises of six individual founder members under the tutelage of Ms. Jackie Leonard Bomboma.</p>
-    </div>
-
-    <div class="vision-container">
-      <div id="vision" class="container">
-        <h1 style="text-align:center;margin-bottom:30px;">Our vision</h1>
-        <p>To become a home of hope, inspirations and solutions to teen mothers, girl child and women in Tanzania mainland.</p>
+      <div class="map" style="padding:0px;background-color:#fff;">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1455.3535836327121!2d37.67985203636862!3d-6.8234847217841565!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x185a5da79ddb21d7%3A0x655ccbb9907e393f!2sTushikamane%20Center!5e1!3m2!1ses!2ses!4v1577718064445!5m2!1ses!2ses" width="100%" height="100%" frameborder="0" style="border:0;display:block;min-height:400px;" allowfullscreen=""></iframe>
       </div>
-    </div>
-
-    <div id="mission" class="container">
-      <h1 style="text-align:center;margin-bottom:30px;">Our mission</h1>
-      <p>To provide a second chance to young (teen mothers) who are school dropout to return to school after birth to finish their education cycle which was vandalized by teen pregnancy, find and raise their talents and skills as well as to support through empowerment programs which can help them to have source of income generating. To provide counseling and awareness education on teen pregnancies, sexual diseases including HIV/AIDS as well as leadership skills for creating confidence and feeling of belonging to re-building their childhood lost dreams of their future.</p>
     </div>
 
     <div id="contact">
       <div class="container">
-        <h2 style="text-align:center;margin-bottom:30px;grid-column:1/13">Contact us</h2>
+        <h2 style="text-align:center;margin-bottom:30px;">Get in touch</h2>
         <form 
           style="grid-column:1/13"
           class="primary-bg contact-form"
