--- a/our-history.html
+++ b/our-history.html
@@ -48,7 +48,7 @@
             <a class="nav-item nav-link" href="#">Programmes</a>
             <a class="nav-item nav-link" href="#">Volunteering</a>
             <a class="nav-item nav-link" href="#">News</a>
-            <a class="nav-item nav-link" href="#">Contact</a>
+            <a class="nav-item nav-link" href="contact.html">Contact</a>
           </div>
         </div>
 
