add founders message

--- a/founders-message.html
+++ b/founders-message.html
@@ -9,8 +9,8 @@
     <script defer src="https://use.fontawesome.com/releases/v5.11.2/js/all.js" integrity="sha384-b3ua1l97aVGAPEIe48b4TC60WUQbQaGi2jqAWM90y0OZXZeyaTCWtBTKtjW2GXG1" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700" rel="stylesheet">
     <link href="./css/main.css" rel="stylesheet">
-    <link media="screen and (max-width: 991px)" href="./css/mobile.css" rel="stylesheet">
-    <link media="screen and (min-width: 992px)" href="./css/desktop.css" rel="stylesheet">
+    <link media="screen and (max-width: 1199px)" href="./css/mobile.css" rel="stylesheet">
+    <link media="screen and (min-width: 1200px)" href="./css/desktop.css" rel="stylesheet">
   </head>
   <body id="founders-message">
 
@@ -89,7 +89,7 @@
       </div>
     </div>
 
-    <div style="padding:50px 0;">
+   <!--  <div style="padding:50px 0;">
       <div id="message" class="container">
         <img src="images/jackie-avatar.jpg">
         <div style="position:relative;">
@@ -98,6 +98,36 @@
           As the World is implementing the Millennium Developments Goals which focus on human well-being; (the first six i.e. Poverty and Hunger Eradication, Achieving Universal Education and Gender Equality, Reduce child mortality, Improve maternal health, Combat HIV/AIDS, Malaria and other diseases), Young Strong Mothers Foundation (YSMF) is working round the clock to ensure that the fundamentals needs of Tanzania's vulnerable and disadvantaged young mothers and their children are being addressed.
         </div>
       </div>
+    </div> -->
+
+    <div class="container founders-message-container">
+      
+      <div class="founders-message-image">
+        <img src="images/founders-message.jpg" width="100%">  
+      </div>
+
+      <div class="founders-message-text">
+        <p>Imagine a girl, pregnant at the age of 15, denied by the man responsible, kicked out by her family, living on the street without family, social or government support. Having no parenting skills or even idea of motherhood. Having no education or skills to be employed, every where the night finds her, she call it a night. Giving birth alone in the middle of the forest without any medical support – and afterwards, living as a street teenage mother with her child. She then works as a maid in many homes. Sexually abused many times, denied food, beaten, discriminated and denied many opportunities. That was my life 17 years ago have just been denied by the man responsible just like the other men do who impregnate teenage mothers.</p>
+
+        <p>While I was working as maid, the last families were different and unique. They treated me like a child at home by listening to me, eating meals together and treated me with fairness.  Eventually they offered to support my secondary education. This gave me an opportunity to see the world from a different and larger perspective and I became aware of the gap between orphans, street children, teenage mothers and opportunities.</p>
+
+        <p>Teenage mothers in Tanzania are a group of invisible, cursed young women that no one sees a need to invest in. Nobody even cares about the crisis that can be caused by tending to blind like increase of a new spread of HIV/AIDS because many of the girls have only the option of sex trade, thereby increasing the number of uneducated women. This leads to more HIV, and also more gender violence, more continuous poverty and more children living in the street.</p>
+
+        <p>Having the fact that I walked the same path most of teenage mothers walk today, I created a desire to start Young Strong Mothers Foundation with vision of becoming a home of hope, inspiration and solutions for the vulnerable young mothers and their children, to date I have supported 760 young mothers in the Morogoro region who now have jobs, education, skills and business, also I bought 10 acres of land where I dream to set the home of hope, solutions and inspiration where teenage mothers and their children will have a place to learn, play, get right information on health issues and meet with people who will inspire, train and empower them without discriminating or judging.</p>
+
+        <p>Not all teenage mothers can fight the fight I fought, walking from being an orphan, street single teenage mother, maid to a CEO, to the alumni of Mandela Washington fellowship 2019 and a partner of Segal family foundation that gave me an opportunity to meet with incredible, supportive and loving people whom most of them I made partners and friends. This is why I started to be great, I never wanted to wait to be great to start so that I can I become an example to many that teenage mothers still have a chance when are supported and given access to opportunities just like other children in the families and communities.</p>
+
+        <p>The number of teenage and young mothers keeps increasing day by day, yet we have very limited resources and cannot meet our annual budget, With the determinations, capacity and willingness to meet our vision with your support we can make it.</p>
+
+        <p>I believe that we all have our weaknesses, we have pasts that are hard to bear but if we use the problems that we are facing in our countries as an opportunity without having shame or fear, and then we can bring about the change that we all dream to meet. I did it, I am still doing it, I now invite you to experience the joy of doing it.</p>
+
+        <p style="font-weight:bold;color:#3c1053;">
+          Jackie Leonard Bomboma<br/>
+          Founder and CEO<br/>
+          Young Strong Mothers Foundation
+        </p>
+      </div>
+
     </div>
 
     <div class="footer" style="background-color:#f5f5f5;">
