--- a/advocacy-and-awareness-creation.html
+++ b/advocacy-and-awareness-creation.html
@@ -120,7 +120,7 @@
           <div><a href="problem-statement.html">Problem statement</a></div>
         </div>
         <div>
-          <div class="footer-heading">What we do</div>
+          <div class="footer-heading">Success stories</div>
         </div>
         <div>
           <div class="footer-heading">Volunteering</div>
