--- a/contact.html
+++ b/contact.html
@@ -44,15 +44,15 @@
               <i class="fas fa-caret-down"></i>
             </span>
             <a class="nav-item nav-link" href="#">What we do</a>
-            <a class="nav-item nav-link" href="#">Programmes</a>
+            <a class="nav-item nav-link" href="#">Success stories</a>
             <a class="nav-item nav-link" href="#">Volunteering</a>
-            <a class="nav-item nav-link" href="#">News</a>
             <a class="nav-item nav-link" href="contact.html">Contact</a>
           </div>
         </div>
 
         <div class="nav-desktop">
           <ul>
+            <li><a href="/index.html">Home</a></li>
             <li>
               <a href="#" class="nav-item">
                 <span>Who we are</span>
@@ -65,11 +65,9 @@
                 <a class="dropdown-item" href="partners.html">Our partners</a>
               </div>
             </li>
-            <li><a href="#">What we do</a></li>
-            <li><a href="#">Programmes</a></li>
+            <li><a href="#">Success stories</a></li>
             <li><a href="#">Volunteering</a></li>
-            <li><a href="#">News</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
       </div>
@@ -189,7 +187,7 @@
           <div><a href="partners.html">Our partners</a></div>
         </div>
         <div>
-          <div class="footer-heading">What we do</div>
+          <div class="footer-heading">Success stories</div>
         </div>
         <div>
           <div class="footer-heading">Volunteering</div>
