--- a/advocacy-and-awareness-creation.html
+++ b/advocacy-and-awareness-creation.html
@@ -114,10 +114,13 @@
     <div class="footer" style="background-color:#f5f5f5;">
       <div class="container footer-container">
         <div>
-          <div class="footer-heading">Who we are</div>
-          <div><a href="founders-message.html">Founder's message</a></div>
-          <div><a href="our-history.html">Our history</a></div>
+          <div class="footer-heading">About us</div>
+          <div><a href="#">Who we are</a></div>
+          <div><a href="#">What we do</a></div>
           <div><a href="problem-statement.html">Problem statement</a></div>
+          <div><a href="#">Impact</a></div>
+          <div><a href="founders-message.html">Founder's message</a></div>
+          <div><a href="partners.html">Our partners</a></div>
         </div>
         <div>
           <div class="footer-heading">Success stories</div>
