--- a/contact.html
+++ b/contact.html
@@ -40,10 +40,9 @@
         <div class="navbar-nav-scroll nav-mobile">
           <div class="navbar-nav bd-navbar-nav flex-row">
             <span class="nav-item nav-link" data-subnav-id="who-we-are-subnav">
-              <span>Who we are</span>
+              <span>About us</span>
               <i class="fas fa-caret-down"></i>
             </span>
-            <a class="nav-item nav-link" href="#">What we do</a>
             <a class="nav-item nav-link" href="#">Success stories</a>
             <a class="nav-item nav-link" href="#">Volunteering</a>
             <a class="nav-item nav-link" href="contact.html">Contact</a>
@@ -52,16 +51,18 @@
 
         <div class="nav-desktop">
           <ul>
-            <li><a href="/index.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li>
               <a href="#" class="nav-item">
-                <span>Who we are</span>
+                <span>About us</span>
                 <i class="fas fa-caret-down"></i>
               </a>
               <div class="dropdown-menu">
-                <a class="dropdown-item" href="founders-message.html">Founder's message</a>
-                <a class="dropdown-item" href="our-history.html">Our history</a>
+                <a class="dropdown-item" href="founders-message.html">Who we are</a>
+                <a class="dropdown-item" href="founders-message.html">What we do</a>
                 <a class="dropdown-item" href="problem-statement.html">Problem statement</a>
+                <a class="dropdown-item" href="our-history.html">Impact</a>
+                <a class="dropdown-item" href="founders-message.html">Founder's message</a>
                 <a class="dropdown-item" href="partners.html">Our partners</a>
               </div>
             </li>
@@ -180,10 +181,12 @@
     <div class="footer">
       <div class="container footer-container">
         <div>
-          <div class="footer-heading">Who we are</div>
-          <div><a href="founders-message.html">Founder's message</a></div>
-          <div><a href="our-history.html">Our history</a></div>
+          <div class="footer-heading">About us</div>
+          <div><a href="#">Who we are</a></div>
+          <div><a href="#">What we do</a></div>
           <div><a href="problem-statement.html">Problem statement</a></div>
+          <div><a href="#">Impact</a></div>
+          <div><a href="founders-message.html">Founder's message</a></div>
           <div><a href="partners.html">Our partners</a></div>
         </div>
         <div>
