--- a/our-history.html
+++ b/our-history.html
@@ -41,10 +41,9 @@
         <div class="navbar-nav-scroll nav-mobile">
           <div class="navbar-nav bd-navbar-nav flex-row">
             <span class="nav-item nav-link" data-subnav-id="who-we-are-subnav">
-              <span>Who we are</span>
+              <span>About us</span>
               <i class="fas fa-caret-down"></i>
             </span>
-            <a class="nav-item nav-link" href="#">What we do</a>
             <a class="nav-item nav-link" href="#">Success stories</a>
             <a class="nav-item nav-link" href="#">Volunteering</a>
             <a class="nav-item nav-link" href="contact.html">Contact</a>
@@ -53,16 +52,18 @@
 
         <div class="nav-desktop">
           <ul>
-            <li><a href="/index.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li>
               <a href="#" class="nav-item">
-                <span>Who we are</span>
+                <span>About us</span>
                 <i class="fas fa-caret-down"></i>
               </a>
               <div class="dropdown-menu">
-                <a class="dropdown-item" href="founders-message.html">Founder's message</a>
-                <a class="dropdown-item" href="our-history.html">Our history</a>
+                <a class="dropdown-item" href="founders-message.html">Who we are</a>
+                <a class="dropdown-item" href="founders-message.html">What we do</a>
                 <a class="dropdown-item" href="problem-statement.html">Problem statement</a>
+                <a class="dropdown-item" href="our-history.html">Impact</a>
+                <a class="dropdown-item" href="founders-message.html">Founder's message</a>
                 <a class="dropdown-item" href="partners.html">Our partners</a>
               </div>
             </li>
@@ -103,14 +104,16 @@
       <p>Ms. Jackie did not wait to be great to start, she started to be great because she believed that everyone has the ability and is responsible for her or his own happiness, success and failure. She believes: "With or without parents, money, education or inheritance young mothers can still build a respectful life and care for others". Together with other six victims of teenage pregnancy, they joined hands and stood up as the voice, way and bridge for other teenage mothers who gave up, who abandoned their children, who are sexual workers, drug dealers, jobless, hopeless to join the family and stand to be good mothers, wives, family members and good citizen.</p>
     </div>
 
-    <div class="footer" style="background-color:#f5f5f5;">
+    <div class="footer">
       <div class="container footer-container">
         <div>
-          <div class="footer-heading">Who we are</div>
-          <div><a href="founders-message.html">Founder's message</a></div>
-          <div><a href="our-history.html">Our history</a></div>
+          <div class="footer-heading">About us</div>
+          <div><a href="#">Who we are</a></div>
+          <div><a href="#">What we do</a></div>
           <div><a href="problem-statement.html">Problem statement</a></div>
-          <div><a href="partners.html">Partners</a></div>
+          <div><a href="#">Impact</a></div>
+          <div><a href="founders-message.html">Founder's message</a></div>
+          <div><a href="partners.html">Our partners</a></div>
         </div>
         <div>
           <div class="footer-heading">Success stories</div>
@@ -125,7 +128,7 @@
       </div>
     </div>
 
-    <div class="footer footer-bottom" style="background-color:#eee;">
+    <div class="footer footer-bottom">
       <div class="container footer-container">
         <div id="copyright">Copyright © 2020. Young Strong Mothers Foundation. All rights reserved.</div>
         <div>
