--- a/advocacy-and-awareness-creation.html
+++ b/advocacy-and-awareness-creation.html
@@ -41,7 +41,7 @@
             <a class="nav-item nav-link" href="#">Who we are</a>
             <a class="nav-item nav-link" href="#">What we do</a>
             <a class="nav-item nav-link" href="#">Programmes</a>
-            <a class="nav-item nav-link" href="#">Volunteering</a>
+            <a class="nav-item nav-link" href="volunteering.html">Volunteering</a>
             <a class="nav-item nav-link" href="#">News</a>
             <a class="nav-item nav-link" href="contact.html">Contact</a>
           </div>
@@ -63,7 +63,7 @@
             </li>
             <li><a href="#">What we do</a></li>
             <li><a href="#">Programmes</a></li>
-            <li><a href="#">Volunteering</a></li>
+            <li><a href="volunteering.html">Volunteering</a></li>
             <li><a href="#">News</a></li>
             <li><a href="#">Contact</a></li>
           </ul>
@@ -115,8 +115,8 @@
       <div class="container footer-container">
         <div>
           <div class="footer-heading">About us</div>
-          <div><a href="#">Who we are</a></div>
-          <div><a href="#">What we do</a></div>
+          <div><a href="who-we-are.html">Who we are</a></div>
+          <div><a href="what-we-do.html">What we do</a></div>
           <div><a href="problem-statement.html">Problem statement</a></div>
           <div><a href="#">Impact</a></div>
           <div><a href="founders-message.html">Founder's message</a></div>
