--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               <i class="fas fa-caret-down"></i>
             </span>
             <a class="nav-item nav-link" href="#">Success stories</a>
-            <a class="nav-item nav-link" href="#">Volunteering</a>
+            <a class="nav-item nav-link" href="volunteering.html">Volunteering</a>
             <a class="nav-item nav-link" href="contact.html">Contact</a>
           </div>
         </div>
@@ -57,16 +57,16 @@
                 <i class="fas fa-caret-down"></i>
               </a>
               <div class="dropdown-menu">
-                <a class="dropdown-item" href="founders-message.html">Who we are</a>
-                <a class="dropdown-item" href="founders-message.html">What we do</a>
+                <a class="dropdown-item" href="who-we-are.html">Who we are</a>
+                <a class="dropdown-item" href="what-we-do.html">What we do</a>
                 <a class="dropdown-item" href="problem-statement.html">Problem statement</a>
-                <a class="dropdown-item" href="our-history.html">Impact</a>
+                <a class="dropdown-item" href="impact.html">Impact</a>
                 <a class="dropdown-item" href="founders-message.html">Founder's message</a>
                 <a class="dropdown-item" href="partners.html">Our partners</a>
               </div>
             </li>
-            <li><a href="#">Success stories</a></li>
-            <li><a href="#">Volunteering</a></li>
+            <li><a href="success-stories.html">Success stories</a></li>
+            <li><a href="volunteering.html">Volunteering</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
@@ -159,8 +159,8 @@
       <div class="container footer-container">
         <div>
           <div class="footer-heading">About us</div>
-          <div><a href="#">Who we are</a></div>
-          <div><a href="#">What we do</a></div>
+          <div><a href="who-we-are.html">Who we are</a></div>
+          <div><a href="what-we-do.html">What we do</a></div>
           <div><a href="problem-statement.html">Problem statement</a></div>
           <div><a href="#">Impact</a></div>
           <div><a href="founders-message.html">Founder's message</a></div>
