--- a/success-stories.html
+++ b/success-stories.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <title>Founders Message - YSMF</title>
+    <title>Our History - YSMF</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
@@ -12,7 +12,7 @@
     <link media="screen and (max-width: 991px)" href="./css/mobile.css" rel="stylesheet">
     <link media="screen and (min-width: 992px)" href="./css/desktop.css" rel="stylesheet">
   </head>
-  <body>
+  <body id="founders-message">
 
     <div class="navbar-top">
       <div class="container">
@@ -84,73 +84,12 @@
 
     <div id="founders-message-title" class="header secondary-bg">
       <div class="container">
-        <h1>Our partners</h1>
+        <h1>Success stories</h1>
       </div>
     </div>
 
-
-    <div id="partners-container" class="container section">
-      <table id="desktop-partners-table">
-        <tr>
-          <th class="bandera">Partner</th>
-          <th>Website</th>
-        </tr>
-        <tr>
-          <td>Morogoro municipality</td>
-          <td>-</td>
-        </tr>
-        <tr>
-          <td>Msichana Initiative</td>
-          <td><a href="https://msichana.or.tz" target="_blank">msichana.or.tz</a></td>
-        </tr>
-        <tr>
-          <td>HUHESO</td>
-          <td><a href="http://huheso.or.tz" target="_blank">huheso.or.tz</a></td>
-        </tr>
-        <tr>
-          <td>Tanzania Child Rights Forum (TCRF)</td>
-          <td><a href="http://www.childrightsforum.org" target="_blank">www.childrightsforum.org</a></td>
-        </tr>
-        <tr>
-          <td>Young African Leaders Initiative (YALI)</td>
-          <td><a href="https://yali.state.gov" target="_blank">yali.state.gov</a></td>
-        </tr>
-        <tr>
-          <td>Equality Now</td>
-          <td><a href="https://www.equalitynow.org" target="_blank">www.equalitynow.org</a></td>
-        </tr>
-        <tr>
-          <td>Students Invested in Health Association (SIHA)</td>
-          <td><a href="http://siha.ca" target="_blank">siha.ca</a></td>
-        </tr>
-      </table>
-
-      <table id="mobile-partners-table">
-        <tr>
-          <th class="bandera">Partner</th>
-        </tr>
-        <tr>
-          <td>Morogoro municipality</td>
-        </tr>
-        <tr>
-          <td><a href="https://msichana.or.tz" target="_blank">Msichana Initiative</a></td>
-        </tr>
-        <tr>
-          <td><a href="http://huheso.or.tz" target="_blank">HUHESO</a></td>
-        </tr>
-        <tr>
-          <td><a href="http://www.childrightsforum.org" target="_blank">TCRF</a></td>
-        </tr>
-        <tr>
-          <td><a href="https://yali.state.gov" target="_blank">YALI</a></td>
-        </tr>
-        <tr>
-          <td><a href="https://www.equalitynow.org" target="_blank">Equality Now</a></td>
-        </tr>
-        <tr>
-          <td><a href="http://siha.ca" target="_blank">SIHA</a></td>
-        </tr>
-      </table>
+    <div class="container section">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Id faucibus nisl tincidunt eget nullam non. Donec et odio pellentesque diam. Et leo duis ut diam quam. Dui vivamus arcu felis bibendum ut tristique et. Scelerisque viverra mauris in aliquam sem. Amet volutpat consequat mauris nunc congue nisi vitae suscipit tellus. Massa placerat duis ultricies lacus sed turpis tincidunt id aliquet. Tellus integer feugiat scelerisque varius. Pharetra pharetra massa massa ultricies mi quis hendrerit. Luctus accumsan tortor posuere ac ut consequat semper. Pellentesque nec nam aliquam sem et. Pretium viverra suspendisse potenti nullam ac tortor vitae purus.</p>
     </div>
 
     <div class="footer" style="background-color:#f5f5f5;">
